# Parallel-image-segmentation

./: CMakeLists.txt  README.md  init_script  main.cpp  main.cu  read_jpeg.py  slic.h  slic_gpu.cpp  slic_gpu.cu  slic_gpu.h
parallel-max-flow/: Makefile  basic.cpp  basic.h  main.cpp  maxFlowPar.cpp  maxFlowPar.h  maxFlowSeq.cpp  maxFlowSeq.h
